<resources>
    <string name="app_name">News Feed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">News</string>
    <string name="nav_header_subtitle">The Guardian Highlights</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="no_internet_connection">"there is no internet connection"</string>
    <string name="no_news">No News to load at the moment"</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Feed Settings</string>

    <string name="settings_theme_label">Theme</string>
    <string name="settings_theme_key" translatable="false">theme</string>

    <string name="settings_country_label">Country</string>
    <string name="settings_country_key" translatable="false">country</string>
    <string name="settings_country_default" translatable="false">International</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order-by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_relevance_value</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_newest_label">newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_oldest_label">oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

    <!--country list-->

    <string name="settings_order_by_International_label">International</string>
    <string name="settings_order_by_International_value" translatable="false">International</string>

    <string name="settings_order_by_India_label">India</string>
    <string name="settings_order_by_India_value" translatable="false">India</string>

    <string name="settings_order_by_America_label">America</string>
    <string name="settings_order_by_America_value" translatable="false">America</string>

    <string name="settings_order_by_Pakistan_label">Pakistan</string>
    <string name="settings_order_by_Pakistan_value" translatable="false">Pakistan</string>

    <string name="settings_order_by_China_label">China</string>
    <string name="settings_order_by_China_value" translatable="false">China</string>

    <string name="settings_order_by_Japan_label">Japan</string>
    <string name="settings_order_by_Japan_value" translatable="false">Japan</string>

    <string name="settings_order_by_Canada_label">Canada</string>
    <string name="settings_order_by_Canada_value" translatable="false">Canada</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="GPSAlertDialogTitle">Location access</string>
    <string name="GPSAlertDialogMessage">Allow location access</string>
    <string name="cancel">cancel</string>

    <string name="body">this section to containt eh headline of the article that will be open whent this text view is clicked so it should contain atleast 4 lines of code"</string>
    <string name="date">22/09/2018</string>
    <string name="time">09:50</string>
    <string name="section">section</string>
    <string name="author">author</string>

</resources>
