<?xml version="1.0" encoding="utf-8"?>
<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:id="@+id/sample1">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:id="@+id/bottom_wrapper"
        android:layout_height="230dp">

        <com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="340dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:elevation="10dp"
            app:corner_radius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray" />
            </LinearLayout>

        </com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout>
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="230dp">

        <com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="340dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:elevation="10dp"
            app:corner_radius="16dp">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/guardian" />


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/gradient"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10">

                        <TextView
                            android:id="@+id/circular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:background="@drawable/circular_background"
                            android:gravity="center"
                            android:textAllCaps="true"
                            android:textColor="@android:color/white"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:gravity="top"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/date"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:paddingLeft="3dp"
                            android:text="@string/date"
                            android:textColor="@android:color/white"
                            android:textSize="11sp" />

                        <TextView
                            android:id="@+id/time"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:paddingLeft="3dp"
                            android:text="@string/time"
                            android:textColor="@android:color/white"
                            android:textSize="11sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/section"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/section"
                            android:textAllCaps="true"
                            android:textColor="@android:color/white"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/author"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:ellipsize="end"
                            android:gravity="right"
                            android:maxLines="1"
                            android:text="@string/author"
                            android:textAllCaps="true"
                            android:textColor="@android:color/white"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="4"
                        android:text="@string/body"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
        </com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout>

    </RelativeLayout>
</com.daimajia.swipe.SwipeLayout>