<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/coordinatorLayout"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/topmost"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/top"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true">

                    <ImageView
                        android:id="@+id/thumbnail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/guardian" />


                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/gradient"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal">

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="10">

                                <TextView
                                    android:id="@+id/circular"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_margin="10dp"
                                    android:background="@drawable/circular_background"
                                    android:gravity="center"
                                    android:textAllCaps="true"
                                    android:textColor="@android:color/white"
                                    android:textSize="25sp"
                                    android:textStyle="bold" />

                            </RelativeLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="5dp"
                                android:gravity="top"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/date"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_gravity="center"
                                    android:layout_marginRight="5dp"
                                    android:layout_marginTop="5dp"
                                    android:layout_weight="1"
                                    android:paddingLeft="3dp"
                                    android:text="@string/date"
                                    android:textColor="@android:color/white"
                                    android:textSize="15sp" />

                                <TextView
                                    android:id="@+id/time"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_gravity="center"
                                    android:layout_marginBottom="5dp"
                                    android:layout_marginRight="5dp"
                                    android:layout_marginTop="5dp"
                                    android:layout_weight="1"
                                    android:paddingLeft="3dp"
                                    android:text="@string/time"
                                    android:textColor="@android:color/white"
                                    android:textSize="15sp" />
                            </LinearLayout>
                        </LinearLayout>


                    </LinearLayout>
                </RelativeLayout>


            </RelativeLayout>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:id="@+id/nested_scroll_view"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="4"
                android:text="@string/body"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/top"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/section"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/section"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/author"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ellipsize="end"
                    android:gravity="right"
                    android:maxLines="1"
                    android:text="@string/author"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather"
                android:text="hello"
                android:textColor="@android:color/black"
                android:textSize="17dp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@android:color/black"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:src="@drawable/arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="swipe right to go back"
            android:textColor="@android:color/darker_gray"
            android:textSize="10sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:id="@+id/linear_layout_night_mode"
        android:background="@drawable/night_mode_drawable"
        android:elevation="16dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/nightmode"
            android:src="@drawable/moon"
            android:scaleType="centerInside"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>

